# stock

./: algo explanation.docx  app.py  main.py  pyproject.toml  requirements.txt  requiremts.txt
