[project]
[tool.poetry]
package-mode = false
name = "stock-app"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
    "prophet",
    "requests",
    "ta",
    "xlsxwriter"
]
